--- a/app/Resources/views/visite/maha.html.twig
+++ b/app/Resources/views/visite/maha.html.twig
@@ -16,7 +16,7 @@
 {% block pagetitle -%}CONTROLER UN VEHICULE{% endblock %}
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('visite_controle') }}">RETOUR A LA LISTE</a></label>
-    <label class="btn btn-outline-secondary"><a href="{{ path('visite_controle') }}">RECUPERER LES RESULTATS MAHA</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('visite_maha', { 'id': visite.id }) }}">RECUPERER LES RESULTATS MAHA</a></label>
 {% endblock %}
 {% block body %}
      <form method='POST' action='{{ path('visite_controleur') }}?id={{ visite.id }}'>
