--- a/app/Resources/views/visite/show.html.twig
+++ b/app/Resources/views/visite/show.html.twig
@@ -17,7 +17,7 @@
 {% block actions %}
     {% if is_granted('ROLE_CONTROLLEUR') %} 
         <label class="btn btn-outline-secondary"><a href="{{ path('visite_controle') }}">LISTE DES CONTROLES</a></label>
-        <label class="btn btn-outline-secondary"><a  href="#" target="_blank" onclick="printDiv('rapport')" title="Imprimer le rapport">RAPPORT</a></label>
+        <label class="btn btn-outline-secondary"><a  href="#" onclick="imprimer()" title="Imprimer le rapport">RAPPORT</a></label>
     {% endif %}
 {% endblock %}
 {% block body %}
@@ -44,7 +44,7 @@
 </div>
 <div>
     <span style="font-weight: bolder">Date de contr&ocirc;le : {% if visite.date %}{{ visite.date|date('Y-m-d H:i:s') }}{% endif %}</span>
-    <span style="float:right">Montant visite : {{ quittance.montantvisite }}</span>
+    <span style="float:right">Montant visite : {{ ((quittance.montantvisite*1.18)|round(0, 'ceil')+120)|number_format(0, ',', ' ') }}</span>
 </div>
 <div>
     <span style="font-weight: bolder">N&deg; de quittance : {{ quittance.numero }}</span>
@@ -52,7 +52,7 @@
 </div>
 <div>
     <span style="font-weight: bolder">N&deg; Immatriculation : {{ visite.vehicule.immatriculation }}</span>
-    <span style="float:right;background: #000;color:#fff;padding:10px">Montant p&eacute;nalit&eacute; : {{ quittance.penalite }}</span>
+    <span style="float:right;background: #000;color:#fff;padding:10px">Montant p&eacute;nalit&eacute; : {{ ((quittance.penalite)|round(0, 'ceil'))|number_format(0, ',', ' ') }}</span>
 </div>
 <div style='margin-bottom:15px'>
     <span style="font-weight: bolder">N&deg; de chassis : {{ visite.vehicule.chassis }}</span>
@@ -88,6 +88,57 @@
 </div>
             
                 </div>
+    <div class="hidden" id="printDiv">
+        <div style="width:200mm">
+            <div>
+                <span style="font-weight: bolder"><img src="{{ asset('images/mts.jpg', absolute=true) }}" /></span>
+            </div>
+            <div>
+                <span style="font-weight: bolder">Date de contr&ocirc;le : {% if visite.date %}{{ visite.date|date('Y-m-d H:i:s') }}{% endif %}</span>
+                <span style="float:right">Montant visite : {{ ((quittance.montantvisite*1.18)|round(0, 'ceil')+120)|number_format(0, ',', ' ') }}</span>
+            </div>
+            <div>
+                <span style="font-weight: bolder">N&deg; de quittance : {{ quittance.numero }}</span>
+                <span style="float:right">Jours de retard : {{ quittance.retard }}</span>
+            </div>
+            <div>
+                <span style="font-weight: bolder">N&deg; Immatriculation : {{ visite.vehicule.immatriculation }}</span>
+                <span style="float:right;background: #000;color:#fff;padding:10px">Montant p&eacute;nalit&eacute; : {{ ((quittance.penalite)|round(0, 'ceil'))|number_format(0, ',', ' ') }}</span>
+            </div>
+            <div style='margin-bottom:15px'>
+                <span style="font-weight: bolder">N&deg; de chassis : {{ visite.vehicule.chassis }}</span>
+            </div>
+            <table border="1" style="width:200mm;" cellpadding="0" cellspacing="0">
+                <tbody>
+                    <tr>
+                        <td>Bilan de la visite technique</td>
+                        <td>D&eacute;tails</td>
+                        <td>Valeur controle</td>
+                        <td>R&eacute;sultat</td>
+                    </tr>
+                    {% if visite.resultats %}
+                        {% for resultat in visite.resultats %}
+                            <tr>
+                                <td>{{ resultat.controle.libelle }}</td>
+                                <td>{{ resultat.controle.detail }}</td>
+                                <td>{{ resultat.commentaire }} ({{ resultat.controle.unite }}) </td>
+                                <td>{% if resultat.succes %}SUCCES{% else %}ECHEC{% endif %}</td>
+                            </tr>
+                        {% endfor %}
+                    {% endif %}
+                 </tbody>
+            </table>
+            <div style='margin-top:15px'>
+                 Controle effctué par {{ visite.chaine.piste.getAffectationActive.agent.nomComplet }}
+            </div>
+            <div style='margin-top:25px'>
+                <span>RESULTAT DU CONTROLE VALABLE POUR LA CIRCULATION DU VEHICULE PENDANT {{ visite.vehicule.typeVehicule.delai }} JOURS SANS CERTIFICAT DE VISITE TECHNIQUE</span>
+            </div>
+            <div>
+                <span>FRAIS A PAYER POUR LA REVISITE REVISITE : {{ visite.vehicule.typeVehicule.montantRevisite|number_format(0, ',', ' ') }} FCFA</span>
+            </div>
+        </div>
+    </div>
     
 {% endblock %}
 
@@ -109,5 +160,14 @@
   setTimeout(function(){newWin.close();},10);
 
 }
+        function imprimer(){
+            var printContents = document.getElementById('printDiv').innerHTML;
+            var originalContents = document.body.innerHTML;
+            document.body.style.backgroundColor = "white"
+            document.body.innerHTML = printContents;
+            window.print();
+            document.body.style.backgroundColor = "rgb(228, 229, 230)";
+            document.body.innerHTML = originalContents;
+        }
 </script>
 {% endblock %}
