--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -33,11 +33,14 @@
         <a class="nav-link nav-dropdown-toggle" href="#">
             <i class="nav-icon fa fa-bar-chart"></i> Statistiques</a>
         <ul class="nav-dropdown-items">
-            <li class="nav-item {% block menu_parcaisse_open %}{% endblock %}">
+            <li class="nav-item ">
                 <a class="nav-link {% block menu_parcaisse_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_caisse_index') }}">
-                    <i class="nav-icon icon-list"></i> Etat journalier</a>
+                    <i class="nav-icon icon-list"></i> Etat par caisse</a>
             </li>
-
+            <li class="nav-item ">
+                <a class="nav-link {% block menu_detail_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_detail_index') }}">
+                    <i class="nav-icon icon-list"></i> Statistiques avancées</a>
+            </li>
         </ul>
     </li>
 {% endif %}
