--- a/app/Resources/views/statistique/caisse/etat.html.twig
+++ b/app/Resources/views/statistique/caisse/etat.html.twig
@@ -1,8 +1,8 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
 {% embed  '::centre/menu.html.twig' %}
+{% block menu_statistiques_open %}active{% endblock %}
 {% block menu_parcaisse_actif %}active{% endblock %}
-{% block menu_parcaisse_open %}active{% endblock %}
 {% endembed %}
 {% endblock %}
 {% block ariane -%}
@@ -27,6 +27,20 @@
     <div class="table-responsive">
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
+                <tr>
+                    <th style="text-align:left">
+                        <img src="{{ asset('images/logocertificat.PNG', absolute=true) }}" />
+                    </th>
+                     <th  style="text-align:left;vertical-align: middle">
+                        DU : {{ debut }} AU : {{ fin }}
+                    </th>
+                    <th  style="text-align:left;vertical-align: middle">
+                        CAISSE N° : {{ caisse.numero }}
+                    </th>
+                    <th colspan="3" style="text-align:left;vertical-align: middle">
+                        CAISSIER : {{ caisse.getAffectationActive.agent.nomComplet }}
+                    </th>
+                </tr>
                 <tr>
                     <th>Catégories</th>
                     <th>Nombre de visites</th>
@@ -56,6 +70,20 @@
                     <div class="table-responsive" style="width:200mm">
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
+                <tr>
+                    <th style="text-align:left">
+                        <img src="{{ asset('images/logocertificat.PNG', absolute=true) }}" />
+                    </th>
+                     <th  style="text-align:left;vertical-align: middle">
+                        DU : {{ debut }} AU : {{ fin }}
+                    </th>
+                    <th  style="text-align:left;vertical-align: middle">
+                        CAISSE N° : {{ caisse.numero }}
+                    </th>
+                    <th colspan="3" style="text-align:left;vertical-align: middle">
+                        CAISSIER : {{ caisse.getAffectationActive.agent.nomComplet }}
+                    </th>
+                </tr>
                 <tr>
                     <th>Catégories</th>
                     <th>Nombre de visites</th>
