chassis sur fiche controle

--- a/app/Resources/views/visite/controles.html.twig
+++ b/app/Resources/views/visite/controles.html.twig
@@ -27,6 +27,7 @@
         <thead>
             <tr>
                 <th>Immatriculation</th>
+                <th>Chassis</th>
                 <th>Proprietaire</th>
                 <th>TYPE</th>
                 <th>ETAT</th>
@@ -40,6 +41,7 @@
         <tfoot>
             <tr>
                 <th>Immatriculation</th>
+                <th>Chassis</th>
                 <th>Proprietaire</th>
                 <th>TYPE</th>
                 <th>ETAT</th>
@@ -56,7 +58,7 @@
         $('#liste_clients').DataTable({
             "columnDefs": [
            
-            { "orderable": false, "targets": 3 }
+            { "orderable": false, "targets": 4 }
         ],
         "processing": true,
         "serverSide": true,
