--- a/app/Resources/views/visite/maha.html.twig
+++ b/app/Resources/views/visite/maha.html.twig
@@ -23,8 +23,12 @@
         <table class="table table-hover">
             <tbody>
                 <tr>
-                    <th>Véhicule</th>
+                    <th>Immatriculation</th>
                     <td>{{ visite.vehicule.immatriculation }}</td>
+                </tr>
+                <tr>
+                    <th>Chassis</th>
+                    <td>{{ visite.vehicule.chassis }}</td>
                 </tr>
                 <tr>
                     <th>Type</th>
