adaptation pour les imports

--- a/app/Resources/views/modele/index.html.twig
+++ b/app/Resources/views/modele/index.html.twig
@@ -20,6 +20,7 @@
     {% if is_granted('ROLE_ENREGISTREMENT') %} 
         <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_modele_new') }}">CREER</a></label>
         <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_modeles_importer_new') }}">IMPORTER</a></label>
+        <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_modeles_importer_ottosys') }}">IMPORTER OTTOSYS</a></label>
     {% endif %}
 {% endblock %}
 {% block body -%}
