--- a/app/Resources/views/vehicule/index.html.twig
+++ b/app/Resources/views/vehicule/index.html.twig
@@ -15,6 +15,7 @@
     <label class="btn btn-outline-secondary"><a href="{{ path('vehicule_new') }}">ENREGISTRER</a></label>
     <label class="btn btn-outline-secondary"><a href="{{ path('vehicule_export') }}">EXPORTER</a></label>
     <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_vehicules_importer_new') }}">IMPORTER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_vehicules_importer_date') }}">DATES</a></label>
 {% endblock %}
 {% block body -%}
     {% if centre.etat %} 
