--- a/app/Resources/views/proprietaire/index.html.twig
+++ b/app/Resources/views/proprietaire/index.html.twig
@@ -14,6 +14,7 @@
     <label class="btn btn-outline-secondary"><a href="{{ path('marque_export') }}">EXPORTER</a></label>
     {% if is_granted('ROLE_ENREGISTREMENT') %} 
         <label class="btn btn-outline-secondary"><a href="{{ path('proprietaire_new') }}">CREER</a></label>
+        <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_proprietaire_importer_new') }}">IMPORTER</a></label>
     {% endif %}
 {% endblock %}
 {% block body -%}
