adaptation pour les imports

--- a/app/Resources/views/caisse/solde.html.twig
+++ b/app/Resources/views/caisse/solde.html.twig
@@ -19,6 +19,7 @@
     {% endif %}
 {% endblock %}
 {% block body %}
+    Solde du centre avant ouverture des caisses: {{ centre.solde|number_format(0, ',', ' ') }}
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
         <input type="submit" value="Enregistrer" />
