--- a/app/Resources/views/centre/ouverture.html.twig
+++ b/app/Resources/views/centre/ouverture.html.twig
@@ -31,12 +31,14 @@
                         <th>Cartes vierges à l'ouverture</th>
                     {% endif %}
                     <th>Cartes vierges en stock</th>
+                    <th>Solde</th>
                 </tr>
                 <tr>
                     {% if centre.etat %}
-                        <td>{{ centre.carteViergeOuverture }}</td>
+                        <td>{{ centre.carteViergeOuverture|number_format(0, ',', ' ') }}</td>
                     {% endif %}
                     <td><a title="Modifier le nombre de carte vierges" href="{{ path('admin_gestion_centre_carte') }}">{{ centre.carteVierge }}</a></td>
+                    <td>{{ centre.solde|number_format(0, ',', ' ') }}</td>
                 </tr>
             </tbody>
         </table>
@@ -54,7 +56,7 @@
             <tbody>
             {% for chaine in chaines %}
                 <tr>
-                    <td><a title="Saisir le solde d'ouverture" href="{{ path('admin_parametres_caisse_solde', { 'id': chaine.caisse.id }) }}">{{ chaine.caisse.numero }}</a></td>
+                    <td><a title="Saisir le solde d'ouverture" href="{{ path('admin_parametres_caisse_solde', { 'id': chaine.caisse.id }) }}">{{ chaine.caisse.numero }}</a> {% if chaine.caisse.ouvert %}(Ouverte){% else %}(Fermée){% endif %}</td>
                     <td>{{ chaine.caisse.soldeInitial|number_format(0, ',', ' ') }}</td>
                     <td>{% if chaine.caisse.getAffectationActive %}{{ chaine.caisse.getAffectationActive.agent.username }}{% else %}Pas d'agent affecté{%endif%}</td>
                     <td>{{ chaine.piste.numero }}</td>
