--- a/app/Resources/views/quittance/show.html.twig
+++ b/app/Resources/views/quittance/show.html.twig
@@ -39,7 +39,7 @@
          <tr>
              <td colspan="7" style="border:none; padding:5px">
                  <span style="font-weight: bold">CVT : {{libelle}}</span>
-                <span style="margin-left:280px; font-weight:bold;">Type/Marque : {{ quittance.visite.vehicule.modele.libelle}}/{{quittance.visite.vehicule.modele.marque.libelle }}</span>
+                <span style="margin-left:280px; font-weight:bold;">Type/Marque : {%if quittance.visite.vehicule.modele%}{{ quittance.visite.vehicule.modele.libelle}}/{{quittance.visite.vehicule.modele.marque.libelle }}{%endif%}</span>
              </td>
          </tr>
             <tr>
@@ -85,7 +85,7 @@
              <tr>
                  <td colspan="7" style="border:none; padding:5px">
                      <span style="font-weight: bold">CVT : {{libelle}}</span>
-                    <span style="margin-left:280px; font-weight:bold;">Type/Marque : {{ quittance.visite.vehicule.modele.libelle}}/{{quittance.visite.vehicule.modele.marque.libelle }}</span>
+                    <span style="margin-left:280px; font-weight:bold;">Type/Marque : {%if quittance.visite.vehicule.modele%}{{ quittance.visite.vehicule.modele.libelle}}/{{quittance.visite.vehicule.modele.marque.libelle }}{%endif%}</span>
                  </td>
              </tr>
                 <tr>
