adaptation pour les imports

--- a/app/Resources/views/visite/controle.html.twig
+++ b/app/Resources/views/visite/controle.html.twig
@@ -26,8 +26,8 @@
                     <td>{{ visite.vehicule.immatriculation }}</td>
                 </tr>
                 <tr>
-                    <th>Chassis</th>
-                    <td>{{ visite.vehicule.chassis }}</td>
+                    <th>Type Chassis</th>
+                    <td>{{ visite.vehicule.typeChassis }}</td>
                 </tr>
                 <tr>
                     <th>Type</th>
