--- a/app/Resources/views/visite/controles.html.twig
+++ b/app/Resources/views/visite/controles.html.twig
@@ -27,7 +27,7 @@
         <thead>
             <tr>
                 <th>Immatriculation</th>
-                <th>Chassis</th>
+                <th>Type Chassis</th>
                 <th>Proprietaire</th>
                 <th>TYPE</th>
                 <th>ETAT</th>
@@ -41,7 +41,7 @@
         <tfoot>
             <tr>
                 <th>Immatriculation</th>
-                <th>Chassis</th>
+                <th>Type Chassis</th>
                 <th>Proprietaire</th>
                 <th>TYPE</th>
                 <th>ETAT</th>
