--- a/app/Resources/views/visite/maha.html.twig
+++ b/app/Resources/views/visite/maha.html.twig
@@ -28,7 +28,7 @@
                 </tr>
                 <tr>
                     <th>Chassis</th>
-                    <td>{{ visite.vehicule.chassis }}</td>
+                    <td>{{ visite.vehicule.typeChassis }}</td>
                 </tr>
                 <tr>
                     <th>Type</th>
