adaptation pour les imports

--- a/app/Resources/views/sortiecaisse/index.html.twig
+++ b/app/Resources/views/sortiecaisse/index.html.twig
@@ -13,7 +13,7 @@
 {% block menu_gestion_actif %}active{% endblock %}
 {% block pagetitle -%}OPERATIONS DE COFFRE (SOLDE : {{ centre.solde|number_format(0, ',', ' ') }}){% endblock %}
 {% block actions %}
-    {% if is_granted('ROLE_SUPERVISEUR') %}
+    {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %}
         <label class="btn btn-outline-secondary"><a href="{{ path('admin_gestion_centre_sorties_new') }}">CREER</a></label>
     {% endif %}
 {% endblock %}
